Reduce Sonar warnings.
Signed-off-by: Shigeru Yasuda <s-yasuda@da.jp.nec.com>